test/langtools/tools/javac/valhalla/value-objects/SynchronizeOnValueInterfaceInstance.out
SynchronizeOnValueInterfaceInstance.java:11:9: compiler.err.type.found.req: SynchronizeOnValueInterfaceInstance, (compiler.misc.type.req.identity)
1 error
